syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.documentservice";
option java_outer_classname = "DocumentServiceProto";
option objc_class_prefix = "ds";

import "policy_service.proto";
package document_service;

// The greeting service definition.
service DocumentService {
    rpc getBillToPolicy(policy_service.PolicyId) returns (PDFDocument){};
    rpc streamBillsOfPeriod(policy_service.Period) returns (stream PDFDocument){};
}

message PDFDocument {
    bytes pdfDocument = 1;
}